--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.tm.etl</groupId>
   <artifactId>db-copy</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0.0</version>
 
   <properties>
     <mysql-connector-java.version>5.1.6</mysql-connector-java.version>
