Pulls HSql JDBC driver from maven repo

--- a/src/test/resources/etl.yml
+++ b/src/test/resources/etl.yml
@@ -8,8 +8,7 @@ dbs:
   driver: "org.hsqldb.jdbc.JDBCDriver"
   url: "jdbc:hsqldb:mem:test"
   jars:
-    - "jar:file:./drivers/hsqldb-2.3.1.jar!/"
-    - "jar:file:./drivers/h2-1.4.196.jar!/"
+    - "jar:https://repo1.maven.org/maven2/org/hsqldb/hsqldb/2.3.1/hsqldb-2.3.1.jar!/"
   autoCommit: false
 
 - &MARIA_DB
